--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>Socket.IO Chat App</title>
 </head>
 <body>
-  <ul id="messages"></ul>
-  <form id="form" action="">
-    <input id="input" autocomplete="off" /><button>Send</button>
-  </form>
+  <div class="chat-container">
+    <div class="chat-header">Socket.IO Chat</div>
+    <ul id="messages" class="chat-messages"></ul>
+    <form id="form" class="chat-form">
+      <input id="input" class="chat-input" autocomplete="off" placeholder="Type a message..." />
+      <button class="chat-send-button">Send</button>
+    </form>
+  </div>
 
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
