--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Socket.IO Chat App</title>
+  <link rel="stylesheet" href="/css/styles.css">
+  <title>Chat App</title>
 </head>
 <body>
   <div class="chat-container">
@@ -17,6 +17,7 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
+  const socket = io.connect{'http://localhost:4000'};
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
