--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,94 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/styles.css">
-  <title>Chat App</title>
+  
+  <title>Socket.IO Chat App</title>
 </head>
 <body>
+
+  <style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+}
+
+.chat-container {
+  max-width: 400px;
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.chat-header {
+  background-color: #075e54;
+  color: white;
+  padding: 10px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.chat-messages {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  max-height: 400px;
+  overflow-y: auto;
+  padding: 10px;
+}
+
+.chat-message {
+  padding: 8px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+.sent-message {
+  background-color: #DCF8C6;
+  align-self: flex-end;
+}
+
+.received-message {
+  background-color: #EDEDED;
+  align-self: flex-start;
+}
+
+.chat-form {
+  display: flex;
+  padding: 10px;
+}
+
+.chat-input {
+  flex: 1;
+  padding: 8px;
+  border: none;
+  border-radius: 25px;
+  margin-right: 10px;
+}
+
+.chat-send-button {
+  background-color: #075e54;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.chat-send-button:hover {
+  background-color: #128c7e;
+}
+
+
+
+  </style>
   <div class="chat-container">
     <div class="chat-header">Socket.IO Chat</div>
-    <ul id="messages" class="chat-messages"></ul>
+    <ul id="messages" class="chat-messages">
+      <!-- Messages will be dynamically added here -->
+    </ul>
     <form id="form" class="chat-form">
       <input id="input" class="chat-input" autocomplete="off" placeholder="Type a message..." />
       <button class="chat-send-button">Send</button>
@@ -17,27 +98,31 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  const socket = io.connect{'http://localhost:4000'};
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    $(function () {
-      const socket = io();
+  <!-- Update the existing JavaScript code -->
+<script>
+  $(function () {
+    const socket = io();
 
-      $('form').submit(function () {
-        const message = $('#input').val();
-        if (message.trim() !== '') {
-          socket.emit('chat message', message);
-          $('#input').val('');
-        }
-        return false;
-      });
-
-      socket.on('chat message', function (message) {
-        $('#messages').append($('<li>').text(message));
-      });
+    $('form').submit(function () {
+      const message = $('#input').val();
+      if (message.trim() !== '') {
+        socket.emit('chat message', message);
+        $('#input').val('');
+      }
+      return false;
     });
-  </script>
+
+    socket.on('chat message', function (message) {
+      const messageClass = socket.id === message.sender ? 'sent-message' : 'received-message';
+      const $messageElement = $('<li>').addClass('chat-message').addClass(messageClass).text(message.text);
+      $('#messages').append($messageElement);
+
+      // Scroll to the bottom of the messages container
+      $('#messages').scrollTop($('#messages')[0].scrollHeight);
+    });
+  });
+</script>
+
 </body>
 </html>
