--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,15 @@
 <!-- ... Previous code ... -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Socket.IO Chat App</title>
+</head>
 <body>
   <div class="chat-container">
-    <div class="chat-header">Socket.IO Chat</div>
+    <div class="chat-header">100x Chat App</div>
     <div id="username-container" class="username-container">
       <input id="username-input" class="username-input" placeholder="Enter your username..." />
       <button id="username-submit" class="username-submit">Submit</button>
@@ -15,131 +23,25 @@
     </form>
   </div>
 
-  <style>
-
-/* Reset some default styles */
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
-}
-
-/* Chat container */
-.chat-container {
-  max-width: 400px;
-  margin: 0 auto;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Chat header */
-.chat-header {
-  background-color: #075e54;
-  color: white;
-  padding: 10px;
-  font-size: 18px;
-  text-align: center;
-}
-
-/* Messages container */
-.chat-messages {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  max-height: 400px;
-  overflow-y: auto;
-  padding: 10px;
-}
-
-/* Individual messages */
-.chat-message {
-  padding: 8px;
-  border-radius: 5px;
-  margin-bottom: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end; /* Align sender messages to the right */
-}
-
-/* Sent messages */
-.sent-message {
-  background-color: #DCF8C6;
-}
-
-/* Received messages */
-.received-message {
-  background-color: #EDEDED;
-  justify-content: flex-start; /* Align receiver messages to the left */
-}
-
-/* Chat form */
-.chat-form {
-  display: flex;
-  padding: 10px;
-}
-
-/* Input field */
-.chat-input {
-  flex: 1;
-  padding: 8px;
-  border: none;
-  border-radius: 25px;
-  margin-right: 10px;
-}
-
-/* Send button */
-.chat-send-button {
-  background-color: #075e54;
-  color: white;
-  border: none;
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.chat-send-button:hover {
-  background-color: #128c7e;
-}
-
-/* Username input container */
-.username-container {
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-/* Username input field */
-.username-input {
-  padding: 5px;
-}
-
-/* Username submit button */
-.username-submit {
-  background-color: #075e54;
-  color: white;
-  border: none;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-
-.username-submit:hover {
-  background-color: #128c7e;
-}
-
-/* Username styling in messages */
-.username {
-  font-weight: bold;
-  color: #333;
-  margin-right: 5px;
-}
 
 
-  </style>
+  
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
+
+const emojiReplacements = {
+      "react": "⭐",
+      "woah": "😲",
+      "hey": "👋",
+      "lol": "😂",
+      "like": "👍",
+      "congratulations": "🎉",
+      // Add more keyword-emoji pairs as needed
+    };
+
+
     $(function () {
       const socket = io();
       let username = '';
@@ -157,7 +59,9 @@ body {
       $('form').submit(function () {
         const message = $('#input').val();
         if (message.trim() !== '') {
-          socket.emit('chat message', { text: message });
+           const modifiedMessage = replaceKeywordsWithEmojis(message);
+          socket.emit('chat message', { text: modifiedMessage });
+          //socket.emit('chat message', { text: message });
           $('#input').val('');
         }
         return false;
@@ -177,6 +81,14 @@ body {
 
         $('#messages').scrollTop($('#messages')[0].scrollHeight);
       });
+      
+      function replaceKeywordsWithEmojis(text) {
+        for (const keyword in emojiReplacements) {
+          const emoji = emojiReplacements[keyword];
+          text = text.replace(new RegExp(keyword, 'g'), emoji);
+        }
+        return text;
+      }
     });
   </script>
 </body>
